RESOLVED FIXED78007
Chromium: Fix Mac rubber band overhang drawing on composited pages and re-enable tests.
https://bugs.webkit.org/show_bug.cgi?id=78007
Summary Chromium: Fix Mac rubber band overhang drawing on composited pages and re-ena...
asvitkine
Reported 2012-02-07 11:30:53 PST
Chromium: Fix Mac rubber band overhang drawing on composited pages and re-enable tests.
Attachments
Patch (3.82 KB, patch)
2012-02-07 11:36 PST, asvitkine
no flags
Patch (3.82 KB, patch)
2012-02-07 11:40 PST, asvitkine
no flags
Patch (675.87 KB, patch)
2012-02-07 11:45 PST, asvitkine
no flags
Patch (675.79 KB, patch)
2012-02-07 13:16 PST, asvitkine
no flags
Patch for landing (678.39 KB, patch)
2012-02-08 06:51 PST, asvitkine
no flags
asvitkine
Comment 1 2012-02-07 11:36:24 PST
asvitkine
Comment 2 2012-02-07 11:40:37 PST
asvitkine
Comment 3 2012-02-07 11:45:26 PST
asvitkine
Comment 4 2012-02-07 11:46:35 PST
(The patch includes new baselines because of subtle changes to gradient pixels between the time the original baselines were added and the current WebKit.)
James Robinson
Comment 5 2012-02-07 13:00:59 PST
Comment on attachment 125889 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=125889&action=review Why is there blue for these: LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-ne-expected.png LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-nw-expected.png LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-se-expected.png LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-sw-expected.png ? They don't look right > Source/WebKit/chromium/src/NonCompositedContentHost.cpp:49 > + m_graphicsLayer->platformLayer()->setBackgroundCoversViewport(false); just #ifdef out the call with (true), it's false by default
asvitkine
Comment 6 2012-02-07 13:11:04 PST
Comment on attachment 125889 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=125889&action=review >> Source/WebKit/chromium/src/NonCompositedContentHost.cpp:49 >> + m_graphicsLayer->platformLayer()->setBackgroundCoversViewport(false); > > just #ifdef out the call with (true), it's false by default Done.
asvitkine
Comment 7 2012-02-07 13:16:59 PST
asvitkine
Comment 8 2012-02-07 13:18:22 PST
(In reply to comment #5) > (From update of attachment 125889 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=125889&action=review > > Why is there blue for these: > > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-ne-expected.png > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-nw-expected.png > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-se-expected.png > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-sw-expected.png > > ? They don't look right The tests set: ::-webkit-scrollbar-track-piece, ::-webkit-scrollbar-corner { background-color: blue; }
James Robinson
Comment 9 2012-02-07 14:13:47 PST
(In reply to comment #8) > (In reply to comment #5) > > (From update of attachment 125889 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=125889&action=review > > > > Why is there blue for these: > > > > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-ne-expected.png > > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-nw-expected.png > > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-se-expected.png > > LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-sw-expected.png > > > > ? They don't look right > > The tests set: > > ::-webkit-scrollbar-track-piece, > ::-webkit-scrollbar-corner { > background-color: blue; > } Oh! My mistake, I was confusing that with the debug blue we use. Might be better if the tests used green or something for scrollbars. Anyway, this patch is fine, then. Thanks!
WebKit Review Bot
Comment 10 2012-02-07 15:48:56 PST
Comment on attachment 125910 [details] Patch Rejecting attachment 125910 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ositedContentHost.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/chromium/test_expectations.txt Hunk #1 succeeded at 517 (offset -2 lines). Hunk #2 FAILED at 4050. 1 out of 2 hunks FAILED -- saving rejects to file LayoutTests/platform/chromium/test_expectations.txt.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'James Robi..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/11459133
asvitkine
Comment 11 2012-02-08 06:51:52 PST
Created attachment 126075 [details] Patch for landing
WebKit Review Bot
Comment 12 2012-02-08 06:52:11 PST
Comment on attachment 126075 [details] Patch for landing Rejecting attachment 126075 [details] from commit-queue. asvitkine@chromium.org does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 13 2012-02-08 08:58:04 PST
Comment on attachment 126075 [details] Patch for landing Clearing flags on attachment: 126075 Committed r107094: <http://trac.webkit.org/changeset/107094>
WebKit Review Bot
Comment 14 2012-02-08 08:58:11 PST
All reviewed patches have been landed. Closing bug.
Julien Chaffraix
Comment 15 2012-02-08 11:33:45 PST
It looks like the baselines committed where were not matching the tests and I rebaselined them in http://trac.webkit.org/changeset/107109. Alexei, could you double check that the new ones make sense? Thanks!
asvitkine
Comment 16 2012-02-08 11:38:21 PST
Oops, sorry about that Julien. The rebaselines look good. Thanks!
Note You need to log in before you can comment on or make changes to this bug.