Chromium: Fix Mac rubber band overhang drawing on composited pages and re-enable tests. https://bugs.webkit.org/show_bug.cgi?id=78007

This got broken by: http://trac.webkit.org/changeset/105470
And the tests were accidentally(?) disabled in: http://trac.webkit.org/changeset/95191

There is still three tests that fail from the set, but the cause for these is different,
which I'm still investigating.

Patch by Alexei Svitkine <asvitkine@chromium.org> on 2012-02-08
Reviewed by James Robinson.

Source/WebKit/chromium:

* src/NonCompositedContentHost.cpp:
(WebKit::NonCompositedContentHost::NonCompositedContentHost):

LayoutTests:

* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/95006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107094 268f45cc-cd09-0410-ab3c-d52691b4dbfc