Source/WebKit/chromium/src/NonCompositedContentHost.cpp
@@ -45,7 +45,9 @@ NonCompositedContentHost::NonCompositedContentHost(PassOwnPtr<WebCore::LayerPain
 #endif
     m_graphicsLayer->setDrawsContent(true);
     m_graphicsLayer->platformLayer()->setIsNonCompositedContent(true);
+#if !ENABLE(RUBBER_BANDING)
     m_graphicsLayer->platformLayer()->setBackgroundCoversViewport(true);
+#endif
     m_graphicsLayer->platformLayer()->setOpaque(true);
 }
 
